<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/first_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_name"
            android:layout_column="1"
            android:layout_marginStart="15dp"
            android:layout_marginTop="40dp"
             />

        <EditText
            android:id="@+id/first_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/first_name"
            android:layout_marginTop="40dp"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/last_name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_name"
            tools:layout_editor_absoluteX="46dp"
            tools:layout_editor_absoluteY="166dp"
            android:layout_column="1"
            android:layout_marginStart="15dp"/>

        <EditText
            android:id="@+id/last_name_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/last_name"
            />
    </TableRow>


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/school_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/school"
            android:layout_column="1"
            android:layout_marginStart="15dp" />

        <EditText
            android:id="@+id/school_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/school"
            />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/grad_year_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_of_graduation"
            android:layout_column="1"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/grad_year_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/year_of_graduation"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:id="@+id/degree_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/degree"
            android:layout_column="1"
            android:layout_marginStart="15dp" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/bsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_s"/>

                <RadioButton
                    android:id="@+id/msButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_s"/>

                <RadioButton
                    android:id="@+id/phdButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ph_d"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/basButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bas"/>

                <RadioButton
                    android:id="@+id/maButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_a"/>

                <RadioButton
                    android:id="@+id/mdButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/m_d"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <RadioButton
                    android:id="@+id/baButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/b_a"/>

                <RadioButton
                    android:id="@+id/mfaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mfa"/>

                <RadioButton
                    android:id="@+id/ddsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dds"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <RadioButton
                    android:id="@+id/bfaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bfa"/>

                <RadioButton
                    android:id="@+id/mbaButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mba"/>

                <RadioButton
                    android:id="@+id/jdButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/j_d"/>

            </LinearLayout>
        </RadioGroup>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/major_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Major"
            android:layout_column="1"
            android:layout_marginStart="15dp"/>

        <Spinner
            android:id="@+id/majorSpinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/fav_act_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/fav_act"
            android:layout_column="1"
            android:layout_marginStart="15dp" />
        <EditText
            android:id="@+id/fav_act_edit_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/fav_act"
            />

    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/createButton"
            android:layout_width="213dp"
            android:layout_height="match_parent"
            android:layout_column="2"
            android:text="@string/create" />
    </TableRow>
</TableLayout>